--- a/try_Statistical_Consulting.Rmd
+++ b/try_Statistical_Consulting.Rmd
@@ -14,8 +14,8 @@ options(scipen=5, digits = 5)
 ```{r}
 # Reading the file:
 # dir <- "C:/Users/Merav/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_3.1.23.xlsx"
-# dir <- "C:/Users/edena/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_3.1.23.xlsx"
-dir<-"C:/Users/Shahar/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_3.1.23.xlsx"
+dir <- "C:/Users/edena/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_3.1.23.xlsx"
+#dir<-"C:/Users/Shahar/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_3.1.23.xlsx"
     
 df <- read_excel(dir, sheet = 1)
 df <- df %>% mutate(DOB = as.Date(DOB)) 
@@ -117,7 +117,7 @@ df <- df %>% mutate(
 
 
 # at this moment there is no sutible data from group 4 - post corona 
-# attach(df)
+attach(df)
 ```
 
 # Summary of the data:
@@ -139,11 +139,11 @@ NA_column = NA_count %>% filter(`amount of NA` >0) %>% arrange(`amount of NA`)
 n = 1439
 xxx <- df[is.na(df$mother_education),]
 
-ftable(xxx$covid_time, xxx$is_atopic_first_year) / rowSums(ftable(xxx$covid_time, xxx$is_atopic_first_year))
+round(ftable(xxx$covid_time, xxx$is_atopic_first_year) / rowSums(ftable(xxx$covid_time, xxx$is_atopic_first_year)),3)
 # ftable(xxx$covid_time, xxx$is_atopic_first_year)/ #166
 ftable(xxx$covid_time, xxx$is_atopic_first_year)
 
-ftable(covid_time, is_atopic_first_year) / rowSums(ftable(covid_time, is_atopic_first_year))
+round(ftable(covid_time, is_atopic_first_year) / rowSums(ftable(covid_time, is_atopic_first_year)),3)
 # ftable(covid_time, is_atopic_first_year) /n
 ftable(covid_time, is_atopic_first_year)
 
@@ -255,6 +255,7 @@ ggplot(new_df_longer, aes(covid_time, y = mean, fill = as.factor(covid_time))) +
 צריך להפוך את זה לגרף מוערם 
 
 צריך לשים לב שאני פילטרתי את מספר בטיפולים = 0 כי אני רוצה לראות את היחס בין מי שכן קיבל טיפול, האם החולי הפך לאגרסיבי יותר ? 
+ האם כדאי להראות את זה ביחס?
 ```{r}
 # how many treatment was given in different covid time groups 
 treatments_kpi <- c('number_of_ABX_first_year', 'number_inhalation','number_steroid_treat')
@@ -267,18 +268,18 @@ treatments_kpi <- c('number_of_ABX_first_year', 'number_inhalation','number_ster
 
 
 
-ggplot(df %>% filter(number_of_ABX_first_year >0 ), aes(x=covid_time, fill=as.factor(number_of_ABX_first_year))) + geom_bar(position = "fill") + 
-  labs( title = 'covid time VS number_of_ABX_first_year', x = 'covid time group', y = 'count', fill = 'number of antib...') + theme_bw()
+ggplot(df %>% filter(number_of_ABX_first_year >0 )%>% mutate(covid_time = as.factor(covid_time)), aes(x=covid_time, fill=as.factor(number_of_ABX_first_year))) + geom_bar(position = "fill") + 
+  labs( title = 'covid time VS number_of_ABX_first_year', x = 'covid time group', y = 'count', fill = 'number of antib...')+ scale_x_discrete(labels = c('Up to March19','March19 - March20','March20 - Feb21')) + theme_bw()
 df %>% filter(number_of_ABX_first_year >0 )%>% group_by(covid_time) %>% summarise(avg_of_ABX_first_year = mean(number_of_ABX_first_year))
 
 
-ggplot(df %>% filter(number_inhalation >0 ), aes(x=covid_time, fill=as.factor(number_inhalation))) + geom_bar(position = "fill") + 
-  labs( title = 'covid time VS number_inhalation', x = 'covid time group', y = 'count', fill = 'number of antib...') + theme_bw()
+ggplot(df %>% filter(number_inhalation >0 )%>% mutate(covid_time = as.factor(covid_time)), aes(x=covid_time, fill=as.factor(number_inhalation))) + geom_bar(position = "fill") + 
+  labs( title = 'covid time VS number_inhalation', x = 'covid time group', y = 'count', fill = 'number of antib...')+ scale_x_discrete(labels = c('Up to March19','March19 - March20','March20 - Feb21')) + theme_bw()
 df %>% filter(number_inhalation >0 )%>% group_by(covid_time) %>% summarise(avg_number_inhalation = mean(number_inhalation))
 
 
-ggplot(df %>% filter(number_steroid_treat >0 ), aes(x=covid_time, fill=as.factor(number_steroid_treat))) + geom_bar(position = "fill") + 
-  labs( title = 'covid time VS steroid_treat', x = 'covid time group', y = 'count', fill = 'number of antib...') + theme_bw()
+ggplot(df %>% filter(number_steroid_treat >0 ) %>% mutate(covid_time = as.factor(covid_time)), aes(x=covid_time, fill=as.factor(number_steroid_treat))) + geom_bar(position = "fill") + 
+  labs( title = 'covid time VS steroid_treat', x = 'covid time group', y = 'count', fill = 'number of antib...')+ scale_x_discrete(labels = c('Up to March19','March19 - March20','March20 - Feb21')) + theme_bw() 
 df %>% filter(number_steroid_treat >0 )%>% group_by(covid_time) %>% summarise(avg_steroid_treat = mean(number_steroid_treat))
 ```
 
@@ -289,7 +290,51 @@ df %>% filter(number_steroid_treat >0 )%>% group_by(covid_time) %>% summarise(av
 ggplot(df, aes(mother_year_birth, fill = as.factor(covid_time))) + geom_density(alpha = 0.3) + theme_bw() + labs(title = 'mother year of birth VS. covid time', fill = 'covid time group')
 ```
 
+##covid time vs ther rest of categorical variables:
+```{r}
+#SES
+p = as.data.frame(with(df,table(covid_time,SES))/rowSums(with(df,table(covid_time,SES))))
 
+ggplot(p,aes(x=as.factor(covid_time), y= Freq, fill = as.factor(SES))) +
+    geom_col() + scale_fill_discrete(name = "SES")+ xlab("covid_time") + ylab("percentage")
+#number_of_children
+p = as.data.frame(with(df,table(covid_time,number_of_children))/rowSums(with(df,table(covid_time,number_of_children))))
+
+ggplot(p,aes(x=as.factor(covid_time), y= Freq, fill = as.factor(number_of_children))) +
+    geom_col() + scale_fill_discrete(name = "number_of_children")+ xlab("covid_time") + ylab("percentage")
+#preganancy_number
+p = as.data.frame(with(df,table(covid_time,preganancy_number))/rowSums(with(df,table(covid_time,preganancy_number))))
+
+ggplot(p,aes(x=as.factor(covid_time), y= Freq, fill = as.factor(preganancy_number))) +
+    geom_col() + scale_fill_discrete(name = "preganancy_number")+ xlab("covid_time") + ylab("percentage")
+#type_of_pregnancy
+p = as.data.frame(with(df,table(covid_time,type_of_pregnancy))/rowSums(with(df,table(covid_time,type_of_pregnancy))))
+
+ggplot(p,aes(x=as.factor(covid_time), y= Freq, fill = as.factor(type_of_pregnancy))) +
+    geom_col() + scale_fill_discrete(name = "type_of_pregnancy")+ xlab("covid_time") + ylab("percentage")
+#nursing_setup_at_12mo
+p = as.data.frame(with(df,table(covid_time,nursing_setup_at_12mo))/rowSums(with(df,table(covid_time,nursing_setup_at_12mo))))
+
+ggplot(p,aes(x=as.factor(covid_time), y= Freq, fill = as.factor(nursing_setup_at_12mo))) +
+    geom_col() + scale_fill_discrete(name = "nursing_setup_at_12mo")+ xlab("covid_time") + ylab("percentage")
+```
+
+##covid time vs ther rest of binary variables:
+עשיתי בלי חיסון שנה ראשונה כי כמעט כולם קיבלו ואין מה להציג.
+
+```{r}
+other_var <- c('SES', 'number_of_children', 'preganancy_number','type_of_pregnancy', 'nursing_setup_at_12mo')
+
+binary_longer <- df %>% select(c(prevention_therapy,steroids_treatment24, hospitalization_24_months,chronic_disease_24 , covid_time,Born_at)) %>% drop_na() %>% group_by(covid_time, Born_at) %>% summarise_if(is.numeric, mean) %>% gather(variables, mean, prevention_therapy:chronic_disease_24, factor_key=TRUE)# pivot_longer(cols = is_atopic, names_to = "chronic_disease", values_to = "mean") 
+
+ggplot(binary_longer, aes(covid_time, y = mean, fill = as.factor(covid_time))) + 
+  geom_col() + theme_bw() + facet_wrap(~variables) + 
+  scale_fill_manual(values=c('dodgerblue4', 'darkorange1', 'green4'),
+                    name = "Born at", labels =c('Up to March19','March19 - March20','March20 - Feb21')) + 
+  xlab("")+  ylab("proportion") + theme(axis.text.x = element_text(color = 'white')) +
+  geom_text(aes(label = round(binary_longer$mean,3)), vjust = 0, size = 3)
+
+```
 
 ## השכלה של האמא 
 ```{r}
@@ -302,15 +347,6 @@ ggplot(df, aes(covid_time, fill = as.factor(mother_education))) + geom_bar(posit
 ## number_of_children
 
 # Not relevant graphs : 
-
-
-
-
-
-
-
-
-
 
 # Graphs that need to be checked : 
 
